--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,16 +27,16 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-isar_version: &isar_version 3.1.0
+isar_version: &isar_version 3.1.0+1
 
 dependencies:
   flutter:
     sdk: flutter
   isar: *isar_version
   isar_flutter_libs: *isar_version
-  path_provider: ^2.1.2
-  intl: ^0.19.0
-  flutter_slidable: ^3.0.0
+  path_provider: ^2.1.5
+  intl: ^0.20.2
+  flutter_slidable: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,7 +47,7 @@ dev_dependencies:
     sdk: flutter
   isar_generator: *isar_version
   build_runner: any
-
+  flutter_launcher_icons: ^0.14.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -55,6 +55,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+
+flutter_launcher_icons:
+  android: ture
+  ios: true
+  image_path: 'assets/images/icon.png'
+  adaptive_icon_background: '#ffffff'
+  adaptive_icon_foreground: 'ssets/images/icon.png'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
